# TunTun

./: .dockerignore  .env.example  .gitignore  .mise.toml  CLA.md  COMMERCIAL-LICENSE.md  Cargo.toml  LICENSE  README.md  arch.md  biome.json  docker-compose.yml  lefthook.yml  package.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  release-binaries.yml  release-sdk.yml  release.yml  sdk.yml  sync-go-mirrors.yml
apps/dashboard/: components.json  package.json  tsconfig.json  vite.config.ts
apps/dashboard/public/: site.webmanifest
apps/dashboard/src/: marketing.css  routeTree.gen.ts  router.tsx  styles.css  vite-env.d.ts
apps/docs/: index.md  package.json
apps/docs/.vitepress/: config.mts
apps/docs/cli/: direct.md  dns.md  enroll.md  index.md  login.md  ping.md  policy.md  posture.md  relay.md  reload.md  route.md  run.md  send.md  serve.md  service.md  ssh.md  status.md  tunnel.md  update.md  validate.md
apps/docs/guide/: comparison.md  configuration.md  installation.md  policy-as-code.md  quickstart-direct.md  quickstart-managed.md  what-is-tunnet.md  what-is-tuntun.md  why-tunnet.md  why-tuntun.md
apps/docs/integrations/: index.md
apps/docs/modes/: upgrade.md
apps/docs/sdk/: file-transfer.md  index.md  node.md  streams.md
apps/docs/self-hosting/: control-plane.md  dashboard.md  database.md  docker.md  env.md  index.md  management.md  relay.md
apps/management/: package.json
apps/management/scripts/: check-type-constraint.ts  lookup-org.ts
apps/management/src/: auth.ts  index.ts
charts/tunnet-operator/: Chart.yaml  values.yaml
charts/tunnet-operator/templates/: _helpers.tpl  credentials-secret.yaml  deployment.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  webhook.yaml
cloud/dashboard/: package.json
cloud/dashboard/src/: index.tsx
cloud/management/: package.json
cloud/management/src/: index.ts
crates/tunnet/: Cargo.toml  README.md
crates/tunnet-agent/: Cargo.toml  build.rs
crates/tunnet-agent/src/: accept.rs  auto_update.rs  cli.rs  cmds.rs  cmds_device.rs  cmds_direct.rs  cmds_login.rs  cmds_policy.rs  cmds_posture.rs  ip.rs  (+25 more)
crates/tunnet-common/: Cargo.toml  README.md
crates/tunnet-control/: Cargo.toml
crates/tunnet-core/: Cargo.toml  README.md
crates/tunnet-kube-node/: Cargo.toml  Dockerfile
crates/tunnet-node-napi/: Cargo.toml  README.md  binding.d.ts  binding.js  package.json  tsconfig.json
crates/tunnet-operator/: Cargo.toml  Dockerfile
crates/tunnet-operator/src/: auth.rs  enroll.rs  health.rs  leader.rs  lib.rs  main.rs  webhook.rs
crates/tunnet-operator/src/controllers/: common.rs  connector.rs  egress.rs  ingress.rs  mod.rs  proxyclass.rs  proxygroup.rs  tunnel.rs
crates/tunnet-operator/src/crds/: types.rs
crates/tunnet-operator/src/resources/: mod.rs
crates/tunnet-policy-engine/: Cargo.toml
crates/tunnet-policy-engine/src/: diff.rs  error.rs  export.rs  hash.rs  ir.rs  lib.rs  merge.rs  selector.rs  simulate.rs  test_runner.rs  validate.rs
crates/tunnet-policy-engine/src/parser/: mod.rs
crates/tunnet-policy-napi/: Cargo.toml
crates/tunnet-policy-napi/src/: lib.rs
crates/tunnet-posture/: Cargo.toml
crates/tunnet-posture/src/: collector.rs  engine.rs  error.rs  evaluate.rs  lib.rs  platform.rs  remediation.rs  score.rs  value.rs
crates/tunnet-posture/src/collectors/: antivirus.rs  app_check.rs  custom_script.rs  disk_encryption.rs  domain_joined.rs  file_check.rs  firewall.rs  mac_security.rs  mdm.rs  mod.rs  os_info.rs  os_updates.rs  screen_lock.rs  secure_boot.rs  tpm.rs
crates/tunnet-relay/: Cargo.toml
crates/tunnet/examples/: connect.rs  echo_server.rs  list_peers.rs
crates/tunnet/src/: enroll.rs  error.rs  features.rs  lib.rs  listener.rs  node.rs  peer.rs  stream.rs  types.rs
crates/tuntun-agent/: Cargo.toml  build.rs
crates/tuntun-agent/src/: accept.rs  auto_update.rs  cli.rs  cmds.rs  cmds_direct.rs  cmds_login.rs  cmds_send.rs  cmds_ssh.rs  cmds_update.rs  config.rs  control_client.rs  dataplane.rs  enforcement.rs  gossip_presence.rs  ip.rs  iroh_io.rs  magic_dns.rs  main.rs  metrics.rs  offload.rs  output.rs  persistent.rs  routing.rs  runtime.rs  service.rs  stream_proxy.rs  system_dns.rs  system_info.rs  system_routes.rs  tun_io.rs  upgrade.rs  wintun_path.rs  ws_client.rs
crates/tuntun-agent/src/recorder/: mod.rs  store.rs
crates/tuntun-agent/src/ssh/: mod.rs  pty.rs  tee.rs
crates/tuntun-common/: Cargo.toml
crates/tuntun-common/src/: ipv6.rs  lib.rs  policy.rs  recording.rs  relay.rs  send.rs  signing.rs  ssh.rs  ws.rs
crates/tuntun-control/: Cargo.toml
crates/tuntun-core/: Cargo.toml
crates/tuntun-node-napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/tuntun-node-napi/npm/darwin-arm64/: README.md  package.json
crates/tuntun-node-napi/npm/darwin-x64/: README.md  package.json
crates/tuntun-node-napi/npm/linux-arm64-gnu/: README.md  package.json
crates/tuntun-node-napi/npm/linux-arm64-musl/: README.md  package.json
crates/tuntun-node-napi/npm/linux-x64-gnu/: README.md  package.json
crates/tuntun-node-napi/npm/linux-x64-musl/: README.md  package.json
crates/tuntun-node-napi/npm/win32-arm64-msvc/: README.md  package.json
crates/tuntun-node-napi/npm/win32-x64-msvc/: README.md  package.json
crates/tuntun-node-napi/src/: duplex.rs  init.rs  lib.rs  package.json
crates/tuntun-relay/: Cargo.toml
crates/tuntun-relay/src/: acme.rs  agent_accept.rs  control.rs  https.rs  main.rs  tcp.rs
deploy/: Dockerfile.control  Dockerfile.dashboard  Dockerfile.kube-node  Dockerfile.management  Dockerfile.operator  Dockerfile.relay
go/: go.work  go.work.sum
go/sdk/: auth.go  go.mod  groups.go  policy.go
go/terraform-provider-tunnet/: .gitignore  .goreleaser.yml  README.md  go.mod  go.sum  main.go
helm/crds/: tunnet.io_crds.yaml
scripts/: create-enrollment-token.ts  guard-oss-push.ts  install.ps1  install.sh  package.json  prepare-git.ts  prepare.ts  push-oss.ts  quickstart.sh  sync-private.ts  sync-public.ts  test.ts
tools/gitops-policy-action/: action.yml  package.json  tsconfig.json
(+496 files in other folders)
