[package]
name = "tunnet-operator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "tunnet-operator"
path = "src/main.rs"

[dependencies]
tunnet-common.workspace = true
tunnet-core.workspace = true

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true

kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls-pemfile.workspace = true
yaml_serde = "0.10.4"
