[package]
name = "tunnet-policy-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tunnet-policy-engine = { workspace = true }
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build.workspace = true
