[package]
name = "tunnet"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Embed a Tunnet mesh node in any Rust application"
repository = "https://github.com/tunnetio/Tunnet"
homepage = "https://tunnet.io"
documentation = "https://docs.rs/tunnet"
keywords = ["tunnet", "mesh", "vpn", "p2p", "sdk"]
categories = ["network-programming", "api-bindings"]
readme = "README.md"

[features]
default = ["managed"]
managed = ["tunnet-core/managed"]
direct = ["tunnet-core/direct"]
send = ["tunnet-core/send", "dep:iroh-blobs"]
serve = ["tunnet-core/serve"]

[dependencies]
tunnet-common = { version = "0.7.0", path = "../tunnet-common" }
tunnet-core = { version = "0.7.0", path = "../tunnet-core", default-features = false }

tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
iroh.workspace = true
bytes.workspace = true
iroh-blobs = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
