[package]
name = "tuntun-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tuntun"
path = "src/main.rs"

[dependencies]
tuntun-common.workspace = true
tuntun-core.workspace = true

tokio.workspace = true
futures-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
hex.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true
crossbeam-channel.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
prometheus.workspace = true
ipnet.workspace = true
sha2.workspace = true
reqwest.workspace = true

iroh.workspace = true
iroh-gossip.workspace = true
tun-rs.workspace = true
portable-pty.workspace = true
rusqlite.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
