[package]
name = "tuntun-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
chrono.workspace = true
ipnet.workspace = true
uuid.workspace = true
