[package]
name = "tuntun-node-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tuntun-common.workspace = true
tuntun-core.workspace = true

napi.workspace = true
napi-derive.workspace = true

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
hex.workspace = true
bytes.workspace = true
futures-util.workspace = true

iroh.workspace = true
chrono.workspace = true

[build-dependencies]
napi-build.workspace = true
